Bug 526216 - mochitest-browser-chrome: crash in nsObjectFrame::IsOpaque while running browser_pluginnotification.js and test_crashing.html, r=josh